# logger-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: LoggerConfig.cmake.in
includes/: Defines.h  FileWriter.h  LogStream.h  Logger.h  LoggerUtils.h
src/: FileWriter.cpp  LogStream.cpp  Logger.cpp
test/: Test.cpp
